tests/baselines/reference/iterableArrayPattern30.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern30.ts(1,7): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern30.ts (1 errors) ====
    const [[k1, v1], [k2, v2]] = new Map([["", true], ["hello", true]])
          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.